--- a/Assets/UILayouts/PlayerInspector.uxml
+++ b/Assets/UILayouts/PlayerInspector.uxml
@@ -10,10 +10,12 @@
         <uie:ObjectField label="scoreText" binding-path="scoreText" name="scoreText" type="TMPro.TMP_Text, Unity.TextMeshPro" />
         <uie:ObjectField label="Damage Indicator" type="Assets.Scripts.DamageIndicator, Assembly-CSharp" binding-path="damageIndicator" name="damageIndicator" />
     </ui:Foldout>
-    <ui:Foldout text="Camera Orthographic Size" name="camSettings" tooltip="Scales orthograpic size as speed increases." value="true">
+    <ui:Foldout text="Camera Orthographic Size" name="camSettings" tooltip="Scales orthograpic size as speed increases." value="false">
         <uie:ObjectField label="My Cam:" binding-path="myCam" type="Cinemachine.CinemachineVirtualCamera, Cinemachine" name="myCam" />
         <uie:ObjectField label="Unity Cam:" binding-path="cam" type="UnityEngine.Camera, UnityEngine.CoreModule" name="cam" />
         <uie:ObjectField label="Camera Settings" allow-scene-objects="false" type="Assets.ScriptableObjects.CameraSettings, Assembly-CSharp" name="cameraSettings" binding-path="cameraSettings" />
+        <uie:PropertyField binding-path="cameraSettings" focusable="true" label="Camera Settings" />
+        <ui:IMGUIContainer name="cameraSettingsIMGUI" />
         <ui:Slider picking-mode="Ignore" label="defaultOrthographicSize:" value="5" high-value="50" tooltip="i" low-value="1" binding-path="cameraSettings.defaultOrthographicSize" show-input-field="true" name="defaultOrthographicSize" />
         <ui:Toggle label="Is Orthographic Size Function Active?" value="false" binding-path="cameraSettings.isOrthographicSizeFunctionActive" name="isOrthographicSizeFunctionActive" />
         <ui:Label text="OrthoSize = i - 1 + b^(deltaD * s)" display-tooltip-when-elided="true" />
@@ -23,22 +25,24 @@
         <ui:IMGUIContainer name="camChart" />
     </ui:Foldout>
     <ui:Foldout text="Movement Settings" name="movementSettings" value="false">
+        <uie:ObjectField label="Movement Settings" allow-scene-objects="false" type="Assets.ScriptableObjects.MovementSettings, Assembly-CSharp" name="movementSettings" binding-path="movementSettings" />
         <ui:Foldout text="Non-Runner Settings" name="nonRunnerSettings" value="false" style="margin-left: 0;">
-            <uie:Vector2Field label="Move Force:" binding-path="moveForce" x="10" y="1" name="moveForce" />
+            <uie:Vector2Field label="Move Force:" binding-path="movementSettings.moveForce" x="10" y="1" name="moveForce" />
         </ui:Foldout>
         <ui:Foldout text="Runner Settings" name="runnerSettings" value="false" style="margin-left: 0;">
-            <ui:Toggle label="Is Constant Movement Enabled?" binding-path="isConstantMovementEnabled" tooltip="&quot;Endless Runner Mode&quot;. Apply a constant displacement and use a different move force." name="isConstantMovementEnabled" />
-            <uie:Vector2Field label="Constant Movement Displacement:" binding-path="constantMovementDisplacement" tooltip="The constant displacement applied under endless runner mode." x="5" name="constantMovementDisplacement" />
-            <uie:Vector2Field label="Constant Move Force:" binding-path="constantMoveForce" x="5" y="1" tooltip="The force applied when using the movement actions if endless runner mode is on." name="constantMoveForce" />
+            <ui:Toggle label="Is Constant Movement Enabled?" binding-path="movementSettings.isConstantMovementEnabled" tooltip="&quot;Endless Runner Mode&quot;. Apply a constant displacement and use a different move force." name="isConstantMovementEnabled" />
+            <uie:Vector2Field label="Constant Movement Displacement:" binding-path="movementSettings.constantMovementDisplacement" tooltip="The constant displacement applied under endless runner mode." x="5" name="constantMovementDisplacement" />
+            <uie:Vector2Field label="Constant Move Force:" binding-path="movementSettings.constantMoveForce" x="5" y="1" tooltip="The force applied when using the movement actions if endless runner mode is on." name="constantMoveForce" />
         </ui:Foldout>
         <ui:Foldout text="Jump Stuff" name="jumpStuff" value="false" style="margin-left: 0;">
-            <uie:Vector2Field label="Jump Force:" binding-path="jumpForce" x="0.5" y="9" name="jumpForce" />
-            <ui:Slider picking-mode="Ignore" label="Max Safe Fall Speed:" value="-10" high-value="0" show-input-field="true" low-value="-20" binding-path="maxSafeFallSpeed" name="maxSafeFallSpeed" inverted="true" />
-            <ui:Slider picking-mode="Ignore" label="Conserved Velocity:" value="0.6" high-value="1" binding-path="conservedVelocity" name="conservedVelocity" show-input-field="true" tooltip="The amount of velocity conserved when jumping off enemies&apos; heads." />
-            <ui:Slider picking-mode="Ignore" label="Wallrun Angle" value="5" high-value="90" show-input-field="true" binding-path="wallRunAngle" tooltip="The angle of attack, in degrees, for wall runs. Determines loss of horizontal speed and hang time." name="wallRunAngle" />
+            <uie:Vector2Field label="Jump Force:" binding-path="movementSettings.jumpForce" x="0.5" y="9" name="jumpForce" />
+            <ui:Slider picking-mode="Ignore" label="Max Safe Fall Speed:" value="-10" high-value="0" show-input-field="true" low-value="-20" binding-path="movementSettings.maxSafeFallSpeed" name="maxSafeFallSpeed" inverted="true" />
+            <ui:Slider picking-mode="Ignore" label="Conserved Velocity:" value="0.6" high-value="1" binding-path="movementSettings.conservedVelocity" name="conservedVelocity" show-input-field="true" tooltip="The amount of velocity conserved when jumping off enemies&apos; heads." />
+            <ui:Slider picking-mode="Ignore" label="Wallrun Angle" value="5" high-value="90" show-input-field="true" binding-path="movementSettings.wallRunAngle" tooltip="The angle of attack, in degrees, for wall runs. Determines loss of horizontal speed and hang time." name="wallRunAngle" />
         </ui:Foldout>
-        <ui:Slider picking-mode="Ignore" label="rollSpeed" value="3" high-value="50" binding-path="rollSpeed" name="rollSpeed" low-value="0.0001" show-input-field="true" />
-        <ui:Slider picking-mode="Ignore" label="rollTimerLength" value="1" high-value="5" binding-path="rollTimerLength" name="rollTimerLength" low-value="0.0001" show-input-field="true" />
+        <ui:Slider picking-mode="Ignore" label="rollSpeed" value="3" high-value="50" binding-path="movementSettings.rollSpeed" name="rollSpeed" low-value="0.0001" show-input-field="true" />
+        <ui:Slider picking-mode="Ignore" label="rollTimerLength" value="1" high-value="5" binding-path="movementSettings.rollTimerLength" name="rollTimerLength" low-value="0.0001" show-input-field="true" />
+        <uie:ObjectField label="rollInfo" allow-scene-objects="false" type="Assets.ScriptableObjects.RollAnimationInfo, Assembly-CSharp" name="rollInfo" binding-path="rollInfo" />
     </ui:Foldout>
     <ui:Foldout text="SFX" name="sfx" value="false">
         <uie:ObjectField label="sfx_Jump" type="UnityEngine.AudioClip, UnityEngine.AudioModule" binding-path="sfx_Jump" name="sfx_Jump" allow-scene-objects="false" />
@@ -46,12 +50,6 @@
         <uie:ObjectField label="sfx_Running" type="UnityEngine.AudioClip, UnityEngine.AudioModule" binding-path="sfx_Running" name="sfx_Running" allow-scene-objects="false" />
         <uie:ObjectField label="sfx_Shotgun" type="UnityEngine.AudioClip, UnityEngine.AudioModule" binding-path="sfx_Shotgun" name="sfx_Shotgun" allow-scene-objects="false" />
         <uie:ObjectField label="sfx_group_Jump" type="Assets.ScriptableObjects.SFX_Group, Assembly-CSharp" binding-path="sfx_group_Jump" name="sfx_group_Jump" allow-scene-objects="false" />
-    </ui:Foldout>
-    <ui:Foldout text="Weapons" name="weapons" value="false">
-        <uie:ObjectField label="Pellet" type="UnityEngine.GameObject, UnityEngine.CoreModule" binding-path="pellet" name="pellet" allow-scene-objects="false" />
-        <ui:Slider picking-mode="Ignore" label="Firerate Length:" value="1" high-value="10" low-value="0.0001" binding-path="fireRateLength" name="fireRateLength" show-input-field="true" />
-        <ui:Slider picking-mode="Ignore" label="sprayRangeDegrees" value="15" high-value="180" low-value="0.0001" show-input-field="true" binding-path="sprayRangeDegrees" name="sprayRangeDegrees" />
-        <ui:SliderInt picking-mode="Ignore" label="shotgunPelletNumber" value="5" high-value="20" binding-path="shotgunPelletNumber" name="shotgunPelletNumber" low-value="1" show-input-field="true" />
     </ui:Foldout>
     <ui:Foldout text="MIsc." name="misc" value="false">
         <ui:Slider picking-mode="Ignore" label="Stumble Timer Length:" value="1" high-value="10" binding-path="stumbleTimerLength" low-value="0.001" name="stumbleTimerLength" show-input-field="true" />
